--- a/app/src/main/res/layout/dskhoas.xml
+++ b/app/src/main/res/layout/dskhoas.xml
@@ -32,7 +32,7 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="250dp"
-                app:srcCompat="@drawable/logo" />
+                app:srcCompat="@drawable/logo_truong" />
         </LinearLayout>
 
         <LinearLayout
