--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,6 +83,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/btn_caidat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="17dp"
