--- a/app/src/main/res/layout/list_item_sinhvien.xml
+++ b/app/src/main/res/layout/list_item_sinhvien.xml
@@ -29,7 +29,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/tvTenSV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
@@ -39,11 +39,11 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView34"
+                android:id="@+id/tvMaSV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:text="Nguyễn Văn A"
+                android:text="21CTHA3123"
                 android:textColor="#000000"
                 android:textSize="14sp" />
         </LinearLayout>
