50% them tinnh nang them sinh vien

--- a/app/src/main/res/layout/nhapthongtinsv.xml
+++ b/app/src/main/res/layout/nhapthongtinsv.xml
@@ -470,6 +470,12 @@
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/button_luu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lưu" />
+
         </LinearLayout>
 
 
