--- a/app/src/main/res/layout/nhapthongtinsv.xml
+++ b/app/src/main/res/layout/nhapthongtinsv.xml
@@ -451,6 +451,11 @@
                 </FrameLayout>
 
             </LinearLayout>
+            <Button
+                android:id="@+id/button_luu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lưu" />
 
             <Button
                 android:id="@+id/button_luu"
