--- a/app/src/main/res/layout/nhapthongtinsv.xml
+++ b/app/src/main/res/layout/nhapthongtinsv.xml
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="2dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Họ"
+                    android:text="Họ và Tên"
                     android:textSize="15dp" />
 
                 <FrameLayout
@@ -117,27 +117,9 @@
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="270dp">
 
-                <TextView
-                    android:id="@+id/textView224"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginBottom="5dp"
-                    android:text="Tên "
-                    android:textSize="15dp" />
-
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-
-                    <EditText
-                        android:id="@+id/txtten"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:background="@drawable/rounded_corner_gray"
-                        android:ems="10"
-
-                        android:inputType="text" />
 
                     <TextView
                         android:id="@+id/textView24"
