themn tinh nang themmonhoc thanh cong

--- a/app/src/main/res/layout/nhapdiem.xml
+++ b/app/src/main/res/layout/nhapdiem.xml
@@ -112,7 +112,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button_luu2"
+            android:id="@+id/button_luu_nhapmonhoc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Lưu" />
