--- a/app/src/main/res/layout/danhsachsinhvien.xml
+++ b/app/src/main/res/layout/danhsachsinhvien.xml
@@ -104,7 +104,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/listView_Sinhvien"
+        android:id="@+id/listView_Diemdanh"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
