--- a/app/src/main/res/layout/diemdanh.xml
+++ b/app/src/main/res/layout/diemdanh.xml
@@ -208,140 +208,16 @@
                 android:text="__________________________________"
                 android:textColor="#3F60A0" />
 
-            <LinearLayout
+            <ListView
+                android:id="@+id/listView_Diemdanh"
                 android:layout_width="match_parent"
-                android:layout_height="67dp"
-                android:background="#EDEDED"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
+                app:layout_constraintVertical_bias="1.0" />
 
-                <CheckBox
-                    android:id="@+id/checkBox"
-                    android:layout_width="5dp"
-                    android:layout_height="37dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="" />
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="Nguyễn Văn A" />
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="30dp"
-                    app:cardBackgroundColor="#FFFFFF"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="7dp"
-                    app:cardPreventCornerOverlap="true">
-
-                    <EditText
-                        android:id="@+id/textView47"
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_weight="1"
-                        android:hint="Ghi chú..."
-                        android:textSize="12sp" />
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="67dp"
-                android:background="#FFFFFF"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/checkBox3"
-                    android:layout_width="5dp"
-                    android:layout_height="37dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="" />
-
-                <TextView
-                    android:id="@+id/textView43"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="Nguyễn Văn B" />
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="30dp"
-                    app:cardBackgroundColor="#FFFFFF"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="7dp"
-                    app:cardPreventCornerOverlap="true">
-
-                    <EditText
-                        android:id="@+id/textView08"
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_weight="1"
-                        android:hint="Ghi chú..."
-                        android:textSize="12sp" />
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="67dp"
-                android:background="#EDEDED"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/checkBox7"
-                    android:layout_width="5dp"
-                    android:layout_height="37dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="" />
-
-                <TextView
-                    android:id="@+id/textView98"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="Nguyễn Văn A" />
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="30dp"
-                    app:cardBackgroundColor="#FFFFFF"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="7dp"
-                    app:cardPreventCornerOverlap="true">
-
-                    <EditText
-                        android:id="@+id/textView40"
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_weight="1"
-                        android:hint="Ghi chú..."
-                        android:textSize="12sp" />
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
