--- a/app/src/main/res/layout/list_item_diemdanh.xml
+++ b/app/src/main/res/layout/list_item_diemdanh.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <CheckBox
-            android:id="@+id/checkBox3"
+            android:id="@+id/checkbox_diemdanh"
             android:layout_width="5dp"
             android:layout_height="37dp"
             android:layout_marginTop="15dp"
@@ -20,7 +20,7 @@
             android:text="" />
 
         <TextView
-            android:id="@+id/textView43"
+            android:id="@+id/textView_diemdanh_tensv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -39,7 +39,7 @@
             app:cardPreventCornerOverlap="true">
 
             <EditText
-                android:id="@+id/textView08"
+                android:id="@+id/textView_diemdanh_note"
                 android:layout_width="100dp"
                 android:layout_height="35dp"
                 android:layout_marginLeft="20dp"
