--- a/app/src/main/res/layout/dskhoas.xml
+++ b/app/src/main/res/layout/dskhoas.xml
@@ -61,6 +61,8 @@
             android:padding="20dp">
 
             <LinearLayout
+                android:id="@+id/LLkhoa21"
+                android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginBottom="20dp"
