--- a/app/src/main/res/layout/nhapdiem.xml
+++ b/app/src/main/res/layout/nhapdiem.xml
@@ -114,7 +114,7 @@
         <Button
             android:id="@+id/button_luu_nhapmonhoc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="Lưu" />
 
     </LinearLayout>
