[hoan thanh] diem danh sinh vien yeyeeyey

--- a/app/src/main/res/layout/list_item_diemdanh.xml
+++ b/app/src/main/res/layout/list_item_diemdanh.xml
@@ -12,12 +12,9 @@
 
         <CheckBox
             android:id="@+id/checkbox_diemdanh"
-            android:layout_width="5dp"
-            android:layout_height="37dp"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/textView_diemdanh_tensv"
