--- a/app/src/main/res/layout/nhapdiem.xml
+++ b/app/src/main/res/layout/nhapdiem.xml
@@ -30,10 +30,28 @@
                 android:id="@+id/textView23"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Lớp" />
+
+            <Spinner
+                android:id="@+id/spinner_lop_diem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Mã sv" />
 
             <Spinner
-                android:id="@+id/spinner_sinhvien"
+                android:id="@+id/spinner_lop_diem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
