--- a/app/src/main/res/layout/danhsachlop.xml
+++ b/app/src/main/res/layout/danhsachlop.xml
@@ -28,19 +28,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
                 android:gravity="bottom|right"
-                android:text="SINH VIÊN"
+                android:text="TÀI CHÍNH NGÂN HÀNG"
                 android:textColor="#000000"
                 android:textSize="44sp" />
-
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
-                android:gravity="bottom|right"
-                android:text="CCNTT21-B"
-                android:textColor="#000000"
-                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/textView2"
