--- a/app/src/main/res/layout/layout_diemsinhvien.xml
+++ b/app/src/main/res/layout/layout_diemsinhvien.xml
@@ -205,7 +205,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvTenSV"
+                android:id="@+id/tvTenLop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
@@ -215,7 +215,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/tvMaSV"
+                android:id="@+id/tvMaLop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
