--- a/app/src/main/res/layout/list_item_lop.xml
+++ b/app/src/main/res/layout/list_item_lop.xml
@@ -13,16 +13,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="66dp"
-            android:layout_height="52dp"
-            android:layout_margin="10dp"
-
-
-            android:gravity="center_horizontal"
-            android:src="@drawable/avt2" />
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +24,7 @@
                 android:layout_height="wrap_content"
 
                 android:layout_marginTop="10dp"
-                android:text="Nguyễn Văn A"
+                android:text="Tài chính ngân hàng 21 A"
                 android:textColor="#000000"
                 android:textSize="24sp" />
 
@@ -43,9 +33,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:text="21CTHA3123"
+                android:text="21CTCNHA"
                 android:textColor="#000000"
                 android:textSize="14sp" />
         </LinearLayout>
-    </LinearLayout>
+    </LinearLayout>Â
 </androidx.constraintlayout.widget.ConstraintLayout>
