dang lam danh sanh ngành và khoa

--- a/app/src/main/res/layout/danhsachkhoa.xml
+++ b/app/src/main/res/layout/danhsachkhoa.xml
@@ -7,8 +7,10 @@
 
     <ListView
         android:id="@+id/list_khoa"
-        android:layout_width="798dp"
-        android:layout_height="1278dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
